[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/clicker_hero_1.png" type="Texture" id=1]
[ext_resource path="res://click_target.gd" type="Script" id=2]
[ext_resource path="res://clickable.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.2082, 33.9405 )

[sub_resource type="Animation" id=2]
resource_name = "hero_attacked"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 18, -0.25, 0, 0.25, 0, 18, -0.25, 0, 0.25, 0, 18, -0.25, 0, 0.25, 0, 18, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "hero_killed"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.49, 1, 1.001 ),
"transitions": PoolRealArray( 0.366021, 1.27456, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 18 ), Vector2( 1.16795, 2.8166 ), Vector2( 6, 20 ), Vector2( 16.6434, 20.6279 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.517633, 1.1487, 0.133972 ),
"update": 0,
"values": [ 0.0, -55.8, -90.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 0.34151, 3.13834, 0.34, 3.14, 1 ),
"update": 0,
"values": [ Vector2( 0, 18 ), Vector2( 0, 7 ), Vector2( 0, 18 ), Vector2( 0, 7 ), Vector2( 0, 18 ) ]
}

[node name="ClickTarget" type="Node2D"]
position = Vector2( 40.9536, 41.5224 )
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
input_pickable = true
script = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="KinematicBody2D"]
margin_left = -33.6765
margin_top = -34.6765
margin_right = 35.3235
margin_bottom = 35.3235
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.647079, -0.32354 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="KinematicBody2D"]

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 0, 18 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
anims/hero_attacked = SubResource( 2 )
anims/hero_killed = SubResource( 3 )
anims/player_healed = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="DPS" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = 37.0903
margin_right = 20.0
margin_bottom = 51.0903
text = "DPS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="damaged" from="KinematicBody2D" to="." method="_on_KinematicBody2D_damaged"]
[connection signal="dead" from="KinematicBody2D" to="." method="_on_KinematicBody2D_dead"]
[connection signal="healed" from="KinematicBody2D" to="." method="_on_KinematicBody2D_healed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
